update import carousel button

--- a/index.html
+++ b/index.html
@@ -410,7 +410,7 @@
       nav:true,
       dots:false,
       center:true,
-      navText: ["<img src='images/Left-button.png' style='height:32px; width: 32px; margin-top:24px; margin-right:12px;'>","<img src='images/Right-button.png' style='height:32px; width: 32px; margin-top:24px; margin-left:12px;'>"],      
+      navText: ["<img src='Images/Left-button.png' style='height:32px; width: 32px; margin-top:24px; margin-right:12px;'>","<img src='Images/Right-button.png' style='height:32px; width: 32px; margin-top:24px; margin-left:12px;'>"],      
       responsive:{
           0:{
               items:1
